# sundial-rust

./: .gitattributes  .gitignore  AGENTS.md  BUILD.md  CORRECTNESS_TESTING_STATUS.md  CROSS_COMPILATION.md  Cargo.toml  MIGRATION.md  PLAN.md  README.md  build.bat  build.rs  build.sh  prek.toml  spec.md
.cargo/: config.toml
.github/workflows/: correctness-tests.yml
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
.ralph-tui/reports/: sequential-summary-41cb1426-7ae4-492f-840c-315fe5eea5c4-2026-04-06T10-53-16-817Z.txt  sequential-summary-631115ee-2815-44a2-9af8-41dc71b9a4b6-2026-04-04T03-30-09-052Z.txt  sequential-summary-db848f74-b19f-4297-9e8b-98b8041dd8b0-2026-04-06T08-12-11-227Z.txt
archive-docs/: BUGFIX_SUMMARY.md  COMPILATION_STATUS.md  DEBUGGING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LOADING_WEIGHTS.md  PHASE1_STATUS.md  PLAN.md  PROGRESS.md  RUST_IMPLEMENTATION_GUIDE.md  WEIGHTS_LOADING_COMPLETE.md
benches/: memory_vs_disk.rs
docs/: BUILD_SYSTEM_ARCHITECTURE.md  PRD-memory-weights.md
examples/: compare_e2e_predictions.rs  compare_exact.rs  compare_exact_same_input.rs  compare_intermediates.rs  compare_no_revin.rs  compare_python.rs  compare_with_pytorch.rs  create_sample_parquet.rs  forecast.rs
model_cache/thuml_sundial-base-128m/: README.md  ts_generation_mixin.py
scripts/: compare_intermediates.py  compare_tensors.py  cross-build-all.sh  cross-linux-aarch64.sh  cross-linux-x86_64.sh  cross-macos-aarch64.sh  cross-macos-x86_64.sh  cross-windows-x86_64.sh  debug_patch_embed.py  download-weights.sh  generate_correct_reference.py  generate_reference.py  generate_reference_simple.py  generate_reference_standalone.py
src/: lib.rs
src/assets/: mod.rs
src/data/: mod.rs  mod.rs.bak
src/flow/: mod.rs  mod.rs.bak  network.rs  network.rs.bak  resblock.rs  resblock.rs.bak  sampling.rs  sampling.rs.bak  timestep_embed.rs  timestep_embed.rs.bak
src/model/: attention.rs  attention.rs.bak  config.rs  config.rs.bak  decoder_layer.rs  decoder_layer.rs.bak  layers.rs  layers.rs.bak  loader.rs  mlp.rs  mlp.rs.bak  mod.rs  mod.rs.bak  patch_embed.rs  patch_embed.rs.bak  rope.rs  rope.rs.bak  sundial.rs  sundial.rs.bak  transformer.rs  transformer.rs.bak
src/testing/: assertions.rs  mod.rs  reference_loader.rs
src/weights/: error.rs  loader.rs  mod.rs
sundial_model/: README.md  modeling_sundial.py
tasks/: prd-cross-platform-build-system-for-sundial-rust.md  prd-fix-end-to-end-test-discrepancies-between-rust-and-python-sundial-implementations.md  prd.json
test_data/: bad.csv  sample.csv  sample.parquet  sample_timeseries.csv
tests/: README.md  build_verification.rs  correctness.rs  embedded_weights_verification.rs  layer_comparison.rs  layer_correctness.rs
tests/reference_data/: input.npy  metadata.json  predictions.npy
tests/reference_data/intermediates/: input.npy  layer_0_output.npy  layer_10_output.npy  layer_11_output.npy  layer_1_output.npy  layer_2_output.npy  layer_3_output.npy  layer_4_output.npy  layer_5_output.npy  layer_6_output.npy  layer_7_output.npy  layer_8_output.npy  layer_9_output.npy  metadata.json  patch_embed_output.npy  transformer_output.npy
tests/reference_data/rope/: metadata.json  rope_cos.npy  rope_k_input.npy  rope_k_output.npy  rope_q_input.npy  rope_q_output.npy  rope_sin.npy
weights/: config.json
