[package]
name = "sundial-rust"
version = "0.1.0"
edition = "2021"
description = "Time series forecasting with Sundial model in Rust"
authors = ["Your Name"]
license = "MIT"

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
# GNU toolchain for Linux x86_64
# Requires: apt-get install -y gcc-musl-dev musl-tools
pre-build = ["apt-get update && apt-get install -y gcc-multilib musl-tools"]
rustflags = ["-C", "link-arg=-lm"]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
# GNU toolchain for Linux aarch64 (ARM64)
# Requires: apt-get install -y gcc-aarch64-linux-gnu musl-tools
pre-build = ["apt-get update && apt-get install -y gcc-aarch64-linux-gnu musl-tools"]
rustflags = ["-C", "link-arg=-lm"]

[package.metadata.cross.target.x86_64-apple-darwin]
environment-vars = ["CFLAGS_x86_64_apple_darwin=-mmacosx-version-min=10.13"]

[package.metadata.cross.target.aarch64-apple-darwin]
environment-vars = ["CFLAGS_aarch64_apple_darwin=-mmacosx-version-min=11.0"]

[package.metadata.cross.target.x86_64-pc-windows-msvc]
environment-vars = ["WINSDK_LIB_DIR=C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.19041.0\\um\\x64"]

[dependencies]
# ML/Deep Learning
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
safetensors = "0.4"

# Data handling
ndarray = "0.15"
polars = { version = "0.45", features = ["lazy", "csv", "parquet"] }
csv = "1.3"

# HTTP & data fetching
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Compression and hashing
flate2 = "1.0"
sha2 = "0.10"

# Temp files
tempfile = "3.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math
statrs = "0.17"

[build-dependencies]
flate2 = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies

[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86_64-specific dependencies

[target.'cfg(target_arch = "aarch64")'.dependencies]
# aarch64-specific dependencies

[features]
default = ["std"]
std = []
# Platform-specific features
linux = []
macos = []
windows = []
# Architecture-specific features
x86_64 = []
aarch64 = []
# ML features
candle-cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true

[profile.release-x86_64-linux]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1

[profile.release-aarch64-linux]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16

[profile.release-x86_64-windows]
inherits = "release"
opt-level = 3
lto = true
panic = "abort"

[profile.release-aarch64-macos]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1

[profile.release-x86_64-macos]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
